force-app/main/default/objects/Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship To)</relationshipLabel>
    <relationshipName>Orders_Ship_To</relationshipName>
    <type>Lookup</type>
</CustomField>