force-app/main/default/objects/Order__c/fields/Adjustment_Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Schedule_Name__c</fullName>
    <label>Adjustment Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>