force-app/main/default/objects/Order__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>