force-app/main/default/objects/Order__c/fields/Commission_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Code_2__c</fullName>
    <label>Commission Code 2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>