force-app/main/default/objects/Order__c/fields/Concatenate_Co_Doc_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Co_Doc_Nbr__c</fullName>
    <externalId>true</externalId>
    <label>Concatenate Co Doc Nbr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>