force-app/main/default/objects/Order__c/fields/ERP_External_id__c.field-meta.xml
<CustomField>
    <fullName>ERP_External_id__c</fullName>
    <externalId>true</externalId>
    <label>ERP External id</label>
    <length>19</length>
    <type>Text</type>
</CustomField>