force-app/main/default/objects/Order__c/fields/Hold_Code_02__c.field-meta.xml
<CustomField>
    <fullName>Hold_Code_02__c</fullName>
    <label>Hold Code 02</label>
    <length>2</length>
    <type>Text</type>
</CustomField>