force-app/main/default/objects/Order__c/fields/HRCSVC20_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Business_Unit__c</fullName>
    <description>Business unit determined based on ship to customer location country. Needed for integration to JDE</description>
    <formula>CASE( TEXT( HRCSVC_Ship_To_Location__r.HRCFSL_Country__c ), &apos;US&apos;, &apos;99635&apos;, &apos;CA&apos;, &apos;99662&apos;, &apos;99635&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>