force-app/main/default/objects/Order__c/fields/HRCSVC20_Pricing_Processing_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Pricing_Processing_Version__c</fullName>
    <description>Processing Version determined based on ship to customer country. Needed for JDE integration</description>
    <formula>CASE( TEXT( HRCSVC_Ship_To_Location__r.HRCFSL_Country__c ), &apos;US&apos;, &apos;HRC0005A&apos;, &apos;CA&apos;, &apos;HRC0038A&apos;, &apos;HRC0005A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Processing Version</label>
    <type>Text</type>
</CustomField>