force-app/main/default/objects/Order__c/fields/HRCSVC20_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Ship_To_Account__c</fullName>
    <description>SE-1914:Update Field Names on Parts Order - New field to fetch ship-to Location.Account (Service Cloud 2.1)</description>
    <formula>HRCSVC_Ship_To_Location__r.HRCFSL_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Account</label>
    <type>Text</type>
</CustomField>