force-app/main/default/objects/Order__c/fields/HRCSVC20_Sold_To_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Sold_To_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-1914:Update Field Names on Parts Order - New field to lookup to Location (Service Cloud 2.1)</description>
    <label>Sold To</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Orders (Sold To Location)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>