force-app/main/default/objects/Order__c/fields/HRCSVC21_Quote__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Quote__c</fullName>
    <label>Quote</label>
    <length>40</length>
    <type>Text</type>
</CustomField>