force-app/main/default/objects/Order__c/fields/HRCSVC21_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-2784: Field with filter for internal service center locations</description>
    <label>Service Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Orders (Service Location)</relationshipLabel>
    <relationshipName>Service_Location_Parts_Order</relationshipName>
    <type>Lookup</type>
</CustomField>