force-app/main/default/objects/Order__c/fields/HRCSVC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this field for #SE-112</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>