force-app/main/default/objects/Order__c/fields/HRCSVC_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Billing_Country__c</fullName>
    <description>SE-940</description>
    <formula>Sold_To__r.BillingCountry</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>