force-app/main/default/objects/Order__c/fields/HRCSVC_Carrier__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>