force-app/main/default/objects/Order__c/fields/HRCSVC_Carrier_Level_of_Service__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Carrier_Level_of_Service__c</fullName>
    <label>Carrier Level of Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HRCSVC_Carrier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FedEx Priority Overnight</fullName>
            </value>
            <value>
                <fullName>FedEx Standard Overnight</fullName>
            </value>
            <value>
                <fullName>FedEx Second Day Service</fullName>
            </value>
            <value>
                <fullName>FedEx Ground</fullName>
                <default>true</default>
                <label>FedEx Ground</label>
            </value>
            <value>
                <fullName>Purolator Ground</fullName>
            </value>
            <value>
                <fullName>Purolator Overnight Express</fullName>
            </value>
            <value>
                <fullName>Purolator Overnight 9:00 am</fullName>
            </value>
            <value>
                <fullName>Purolator Overnight 10:30 am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>