force-app/main/default/objects/Order__c/fields/HRCSVC_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>