force-app/main/default/objects/Order__c/fields/HRCSVC_City__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>