force-app/main/default/objects/Order__c/fields/HRCSVC_Concession_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Approved_By__c</fullName>
    <description>SE-171- Define concessions/override the billing of a paid loaner by updating the following fields on the associated Loaner Order.</description>
    <label>Concession Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>