force-app/main/default/objects/Order__c/fields/HRCSVC_Concession_By__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-171</description>
    <label>Concession By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>