force-app/main/default/objects/Order__c/fields/HRCSVC_Concession_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Date__c</fullName>
    <description>SE-171</description>
    <label>Concession Date</label>
    <type>DateTime</type>
</CustomField>