force-app/main/default/objects/Order__c/fields/HRCSVC_Concession_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Reason__c</fullName>
    <description>SE-171- Define concessions/override the billing of a paid loaner by updating the following fields on the associated Loaner Order.</description>
    <label>Concession Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>