force-app/main/default/objects/Order__c/fields/HRCSVC_Contact__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>