force-app/main/default/objects/Order__c/fields/HRCSVC_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Name__c</fullName>
    <label>Recipient Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>