force-app/main/default/objects/Order__c/fields/HRCSVC_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>