force-app/main/default/objects/Order__c/fields/HRCSVC_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Source__c</fullName>
    <description>SE-997</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Service Tech/Service Manager</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
                <default>true</default>
                <label>Telephone</label>
            </value>
            <value>
                <fullName>Web/Hillrom Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>