force-app/main/default/objects/Order__c/fields/HRCSVC_Country__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Country__c</fullName>
    <description>SE-2249 :  Changed datatype from Text to Pick List (Service Cloud 2.1)</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Countries</valueSetName>
    </valueSet>
</CustomField>