force-app/main/default/objects/Order__c/fields/HRCSVC_Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delivery_Instruction__c</fullName>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>