force-app/main/default/objects/Order__c/fields/HRCSVC_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>