force-app/main/default/objects/Order__c/fields/HRCSVC_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>