force-app/main/default/objects/Order__c/fields/HRCSVC_ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_ERP_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>