force-app/main/default/objects/Order__c/fields/HRCSVC_Evaluation_Duration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Evaluation_Duration__c</fullName>
    <description>SE-174 - Calculation depends on whether Evaluation was delivered via work order or shipped</description>
    <formula>TODAY()- HRCSVC_Evaluation_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>