force-app/main/default/objects/Order__c/fields/HRCSVC_Evaluation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Evaluation_Received_Date__c</fullName>
    <description>SE-174</description>
    <label>Evaluation Received Date</label>
    <type>Date</type>
</CustomField>