force-app/main/default/objects/Order__c/fields/HRCSVC_Internal_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Internal_Order_Notes__c</fullName>
    <label>Internal Order Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>