force-app/main/default/objects/Order__c/fields/HRCSVC_Loaner_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Loaner_Price__c</fullName>
    <description>SE 42</description>
    <label>Loaner Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>