force-app/main/default/objects/Order__c/fields/HRCSVC_Medical_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Medical_Record_ID__c</fullName>
    <label>Medical Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>