force-app/main/default/objects/Order__c/fields/HRCSVC_No_Charge_Concession__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_No_Charge_Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-171- Define concessions/override the billing of a paid loaner by updating the following fields on the associated Loaner Order.</description>
    <label>No Charge Concession</label>
    <type>Checkbox</type>
</CustomField>