force-app/main/default/objects/Order__c/fields/HRCSVC_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order_Reason__c</fullName>
    <label>Order Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>