force-app/main/default/objects/Order__c/fields/HRCSVC_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>S5</fullName>
                <label>Credit Only</label>
            </value>
            <value>
                <fullName>Y3</fullName>
                <label>Essential Contract Orders</label>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>SZ</fullName>
                <label>Export Markets Warranty  Ord</label>
            </value>
            <value>
                <fullName>S6</fullName>
                <label>Invoice Only</label>
            </value>
            <value>
                <fullName>Loaner Order</fullName>
            </value>
            <value>
                <fullName>Rental Order</fullName>
                <default>true</default>
                <label>Rental Order</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Sales Adjustment</label>
            </value>
            <value>
                <fullName>SX</fullName>
                <label>Sales Order - Export Markets</label>
            </value>
            <value>
                <fullName>S4</fullName>
                <label>Sales Order - TBM</label>
            </value>
            <value>
                <fullName>SH</fullName>
                <label>SH - House Order</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>SO - Sales Order</label>
            </value>
            <value>
                <fullName>SP</fullName>
                <label>SP - Sales Proposal</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>SW - Service Warranty Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>