force-app/main/default/objects/Order__c/fields/HRCSVC_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>