force-app/main/default/objects/Order__c/fields/HRCSVC_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PO_Number__c</fullName>
    <label>Purchase Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>