force-app/main/default/objects/Order__c/fields/HRCSVC_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Proposal_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>