force-app/main/default/objects/Order__c/fields/HRCSVC_Salesforce_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Salesforce_Order_Number__c</fullName>
    <displayFormat>OR-{0}</displayFormat>
    <label>Salesforce Order Number</label>
    <type>AutoNumber</type>
</CustomField>