force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_complete_Indicator__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_complete_Indicator__c</fullName>
    <label>Ship complete Indicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>