force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To_Address__c</fullName>
    <label>Ship To Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>