force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_To_Attn_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To_Attn_Name__c</fullName>
    <label>Ship To Attn Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>