force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_To_Attn_Phone__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To_Attn_Phone__c</fullName>
    <label>Ship To Attn Phone #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>