force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To (Location)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>