force-app/main/default/objects/Order__c/fields/HRCSVC_Ship_To_Party__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ship_To_Party__c</fullName>
    <label>Ship To Party</label>
    <length>100</length>
    <type>Text</type>
</CustomField>