force-app/main/default/objects/Order__c/fields/HRCSVC_Sold_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Sold_To_Email_Address__c</fullName>
    <label>Sold To Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>