force-app/main/default/objects/Order__c/fields/HRCSVC_Sold_To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Sold_To_Phone_Number__c</fullName>
    <label>Sold To Phone Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>