force-app/main/default/objects/Order__c/fields/HRCSVC_State_Province__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>