force-app/main/default/objects/Order__c/fields/HRCSVC_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status__c</fullName>
    <description>Created this field for #SE-112</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Rental</fullName>
            </value>
            <value>
                <fullName>Swapped</fullName>
            </value>
            <value>
                <fullName>Requested Rental</fullName>
            </value>
            <value>
                <fullName>Rental Activity</fullName>
            </value>
            <value>
                <fullName>Active Rental</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Evaluation Requested</fullName>
            </value>
            <value>
                <fullName>Active Evaluation</fullName>
            </value>
            <value>
                <fullName>Completed Evaluation</fullName>
            </value>
            <value>
                <fullName>Active Loaner</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Completed Loaner</fullName>
            </value>
            <value>
                <fullName>Loaner Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>