force-app/main/default/objects/Order__c/fields/HRCSVC_Street_2__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Street_2__c</fullName>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>