force-app/main/default/objects/Order__c/fields/HRCSVC_Street__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>