force-app/main/default/objects/Order__c/fields/HRCSVC_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>