force-app/main/default/objects/Order__c/fields/LastModifiedCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedCreatedDate__c</fullName>
    <formula>LastModifiedDate =  CreatedDate</formula>
    <label>LastModifiedCreatedDate</label>
    <type>Checkbox</type>
</CustomField>