force-app/main/default/objects/Order__c/fields/Main_SRP_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Main_SRP_Code_2__c</fullName>
    <label>Main SRP Code 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>