force-app/main/default/objects/Order__c/fields/Main_SRP_Code_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Main_SRP_Code_2_Description__c</fullName>
    <label>Main SRP Code 2 Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>