force-app/main/default/objects/Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number (Do Not Use)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>