force-app/main/default/objects/Order__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number*</label>
    <length>25</length>
    <type>Text</type>
</CustomField>