force-app/main/default/objects/Order__c/fields/Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Date__c</fullName>
    <label>Order Date *</label>
    <type>Date</type>
</CustomField>