force-app/main/default/objects/Order__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To (Account)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Account.Billing_Type__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filterItems>
        <filterItems>
            <field>Account.Billing_Type__c</field>
            <operation>equals</operation>
            <value>X</value>
        </filterItems>
        <filterItems>
            <field>Account.JDE_External_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Sold To)</relationshipLabel>
    <relationshipName>Order_Sold_To</relationshipName>
    <type>Lookup</type>
</CustomField>